fix stretch of items in the row in Statistics

--- a/src/main/resources/src/components/MainPage/StatisticsPage/StatisticsPage.scss
+++ b/src/main/resources/src/components/MainPage/StatisticsPage/StatisticsPage.scss
@@ -33,7 +33,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: stretch;
             margin-bottom: 5px;
         }
 
@@ -163,7 +163,7 @@
                 }
 
                 &--positive {
-                    margin-top: 2px;
+                    // margin-top: 2px;
                     .panel__arrow {
                         margin-top: 1px;
                         margin-bottom: auto;
